--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "express": "^4.18.1",
     "express-openapi-validator": "^4.13.8",
     "helmet": "^5.1.1",
+    "isomorphic-fetch": "^3.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
@@ -69,6 +70,7 @@
     "mongoose": "^6.5.2",
     "newrelic": "^9.0.0",
     "node-fetch": "^3.2.10",
+    "redis": "^4.3.0",
     "require-dir": "^1.2.0",
     "spdy": "^4.0.2",
     "swagger-ui-express": "^4.5.0",
