--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon",
-    "test": "npm run lint && npm run test:cover",
+    "test": "npm run test:cover",
     "test:teamcity": "cross-env NODE_ENV=test PORT=9999 nyc mocha",
     "mocha": "cross-env NODE_ENV=test PORT=9999 mocha",
     "test:cover": "cross-env NODE_ENV=test PORT=9999 nyc mocha",
@@ -107,6 +107,5 @@
   "engines": {
     "node": ">=16.15"
   },
-  "author": "Gabriel Verges <stellarusi@gmail.com>",
   "license": "MIT"
 }
